--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="nav-links">
           <li><a href="../index.html">Home</a></li>
           <li><a class="active" href="Imageupload.html">Customer Image</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li><a href="textSpeech.html">Text to speech</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       
